--- a/example/test.html
+++ b/example/test.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>fast-cache test</p>
+    <p>example</p>
     <script src="../release/bundle.js"></script>
+    <script>
+        var FC = window.FastCache;
+        var cache = new FC();
+        cache.set('a', 100);
+        alert(cache.get('a'));
+    </script>
 </body>
 </html>
